fix broken css

--- a/src/components/AdminUsersProfile/AdminUserPage.css
+++ b/src/components/AdminUsersProfile/AdminUserPage.css
@@ -3,12 +3,18 @@
   background-color: #f9f9f9;
   position: absolute;
   box-shadow: 0 4px 4px 0 rgba(117, 117, 117, 0.2);
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
 .BetaUser {
@@ -20,10 +26,12 @@
   text-align: center;
   font-size: 18px;
 }
+
 .creditCoin {
   width: 1rem;
   height: 1rem;
 }
+
 .creditSection {
   display: flex;
   flex-direction: row;
@@ -35,7 +43,7 @@
   color: inherit;
 }
 
-.AdminUserPageContainer{
+.AdminUserPageContainer {
   height: 100%;
   display: grid;
   grid-template-rows: 1fr 1fr;
@@ -43,7 +51,7 @@
   gap: 2rem;
 }
 
-.UserProfile{
+.UserProfile {
   display: grid;
   grid-template-columns: 35% auto;
 }
@@ -56,33 +64,36 @@
   font-weight: bold;
   font-size: 74px;
   display: flex;
-  align-items: center; /* horizontal */
-  justify-content: center; /* vertical */
+  align-items: center;
+  /* horizontal */
+  justify-content: center;
+  /* vertical */
 }
 
-.UserProfileInfo{
+.UserProfileInfo {
   display: grid;
   grid-template-rows: repeat(6, 1fr);
 }
-.ProfileInfoRow{
+
+.ProfileInfoRow {
   display: grid;
   grid-template-columns: 20% auto;
 }
 
-.ProfileInfoAttribute{
+.ProfileInfoAttribute {
   display: grid;
   align-items: center;
   color: #008AC1;
   font-weight: bold;
 }
 
-.ProfileInfoValue{
+.ProfileInfoValue {
   display: grid;
   align-items: center;
   /* max-height: 2rem; */
 }
 
-.CreditsButton{
+.CreditsButton {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: 20% auto;
@@ -90,13 +101,13 @@
   align-items: center;
 }
 
-.CreditsTable{
+.CreditsTable {
   background-color: #ffffff;
   border: 1px solid #ccc;
   height: 100%;
 }
 
-.BlueButton{
+.BlueButton {
   background-color: #008AC1;
   color: #ffffff;
   /* padding: 0.5rem 1rem; */
@@ -105,7 +116,7 @@
   cursor: pointer;
 }
 
-.CreditsHeader{
+.CreditsHeader {
   line-height: 2rem;
   padding: .5rem 2rem;
   font-weight: 600;
@@ -113,7 +124,7 @@
   border: 1px solid #ccc;
 }
 
-.CreditsHead{
+.CreditsHead {
   line-height: 1.8rem;
   padding-left: 2rem;
   font-weight: 500;
@@ -122,7 +133,7 @@
   color: #008AC1;
 }
 
-.CreditsHeaderRow{
+.CreditsHeaderRow {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 2rem;
@@ -130,39 +141,41 @@
   border-top-width: 80%;
 }
 
-.Credits{
+.Credits {
   height: 100%;
 }
 
-.CreditsError{
+.CreditsError {
   display: grid;
   height: 50%;
   place-items: center;
   padding-left: 2rem;
 }
 
-.CreditsBody{
+.CreditsBody {
   height: 100%;
 }
 
-.CreditsWrap{
+.CreditsWrap {
   display: grid;
   align-items: center;
   grid-auto-flow: column;
   width: 3rem;
 }
 
-.CreditsRowAttribute{
+.CreditsRowAttribute {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   padding: .5rem 1rem;
 }
-.CreditsRowAttribute:first-child{
+
+.CreditsRowAttribute:first-child {
   padding-left: 2rem;
 }
 
-.CreditsRowAttribute:first-child:hover, .CreditsRowAttribute:last-child:hover{
+.CreditsRowAttribute:first-child:hover,
+.CreditsRowAttribute:last-child:hover {
   overflow: visible;
 }
 
@@ -170,10 +183,11 @@
   padding-right: 2rem;
 }
 
-.CreditsHeaderAttribute{
+.CreditsHeaderAttribute {
   padding: .3rem 0rem;
 }
-.ManageUser{
+
+.ManageUser {
   font-size: 20px;
   font-weight: bold;
   display: inline-flex;
@@ -181,21 +195,25 @@
   justify-content: left;
   border-bottom: 1px solid #999999;
 }
-.ManageUserContainer{
+
+.ManageUserContainer {
   background-color: #ffffff;
   border-radius: 10px;
 }
-.DiasbleUserContent{
+
+.DiasbleUserContent {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 10px;
 }
-.DiasbleUserContent{
+
+.DiasbleUserContent {
   font-weight: bold;
   margin: 5px 0px 0px 10px;
 }
-.DisableWarning{
+
+.DisableWarning {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -203,31 +221,55 @@
   padding: 0px 0px 10px 0px;
   border-bottom: 1px solid #999999;
 }
-.DeleteUserContent{
+
+.DeleteUserContent {
   font-weight: bold;
   margin: 5px 0px 0px 10px;
   padding: 5px 0px 0px 0px;
 }
-.Delete--Warning{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0px 10px 0px 10px;
-  padding: 0px 0px 10px 0px;
-  border-bottom: 1px solid #999999;
-}
-.DeleteWarning{
-  outline-color: red;
+
+.DeleteWarning {
   color: red;
   background-color: #ffffff;
 }
-.DeleteWarning:hover{
-  background-color: red;
-  color: #ffffff;
-}
-.ManageUserContainer .DeleteWarning{
+
+.ManageUserContainer .DeleteWarning {
   margin-bottom: 10px;
 }
-.MainPage{
+
+.MainPage {
   height: 100%;
+}
+
+.ManageUserSection {
+  grid-gap: 1rem;
+  background: #fff;
+  border: 1px solid var(--gray-light-color);
+  border-radius: 15px;
+  display: grid;
+  gap: 1rem;
+  padding: 1rem
+}
+
+.ManageUserBody {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  background-color: var(--gray-light-color);
+}
+
+.ManageUserSectionInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+
+.ManagerUserRow {
+  display: flex;
+  color: #000000;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.8rem;
+  margin: 0;
+  background-color: white;
 }
